# creek

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
apps/: admin_client.cpp  hello_client.cpp  hello_server.cpp  registrar.cpp  sidecar_main.cpp
docs/: api.md  architecture.md  framework-refactor-experience.md  overview.md  redis.md  testing.md  tutorial.md
include/creek/: blocking_queue.hpp  circuit_breaker.hpp  crash_handler.hpp  crypto.hpp  filter_builtin.hpp  filter_chain.hpp  json_rpc.hpp  logger.hpp  metrics.hpp  otlp.hpp  redis.hpp  routing.hpp  runtime.hpp  tight.hpp  trace_context.hpp  types.hpp  wasm_runtime.hpp
include/creek/framework/: blackboard.hpp  change_set.hpp  channel.hpp  data_evolver.hpp  framework.hpp  heartbeat.hpp  logger_adapter.hpp  message.hpp  metrics.hpp  reactor.hpp  routing_adapter.hpp  stage4.hpp  task.hpp  time_source.hpp  timer.hpp
include/creek/leaf/: leaf_runtime.hpp
include/creek/node/: node_runtime.hpp
include/creek/rpc/: admin_service.hpp  greeter_service.hpp  leaf_control_service.hpp
include/creek/tight/: bandwidth.hpp  fec.hpp  packet_codec.hpp  tight.hpp  transport.hpp
proto/: creek.proto
skills/cpp-large-refactor/: SKILL.md
src/: circuit_breaker.cpp  crash_handler.cpp  crypto.cpp  filter_builtin.cpp  filter_chain.cpp  json_rpc.cpp  logger.cpp  metrics.cpp  otlp.cpp  redis.cpp  routing.cpp  runtime.cpp  runtime_wire.hpp  socket_compat.hpp  tight.cpp  trace_context.cpp  types.cpp  wasm_runtime.cpp
src/framework/: blackboard.cpp  data_evolver.cpp  framework.cpp  heartbeat.cpp  logger_adapter.cpp  message.cpp  metrics.cpp  reactor.cpp  routing_adapter.cpp  stage4.cpp  task.cpp  time_source.cpp  timer.cpp
src/leaf/: generic_proxy.hpp  leaf_generic.cpp  leaf_runtime.cpp  leaf_runtime_impl.hpp
src/node/: node_runtime.cpp  node_runtime_impl.hpp
src/rpc/: admin_service.cpp  greeter_service.cpp  leaf_control_service.cpp
src/tight/: bandwidth.cpp  transport.cpp
tests/: CMakeLists.txt  e2e_2node_main.cpp  e2e_2node_test.cpp  e2e_2node_test.hpp  filter_chain_test.cpp  json_rpc_test.cpp  routing_metrics_test.cpp  tight_test.cpp  wasm_test.cpp
tests/e2e/: e2e_grpc.py  e2e_jsonrpc.py
tests/e2e_grpc/: CMakeLists.txt  e2e_2node_main.cpp  e2e_2node_test.cpp  e2e_2node_test.hpp  e2e_generic_main.cpp  e2e_generic_test.cpp  e2e_grpc_main.cpp  e2e_grpc_test.cpp  e2e_grpc_test.hpp  e2e_hardening_main.cpp  e2e_hardening_test.cpp  e2e_jsonrpc_main.cpp  e2e_jsonrpc_test.cpp  e2e_jsonrpc_test.hpp  echo.proto  echo_backend.cpp
tests/integration/: mini.bat  redis_discovery_e2e.bat  redis_discovery_e2e.cpp
tests/unit/: framework_test.cpp
tight/src/: peer.hpp  transport.cpp
tools/: e2e_2node.ps1  redis.conf  redis_e2e.ps1  sample_filter.wasm  sample_filter.wat  start_proc.ps1  test.err
